<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:padding="24dp"


    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:text="@string/welcome_back"
            android:textColor="@color/primary_text"

            android:textSize="18sp"
            android:textStyle="bold"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:text="@string/login_to_continue"
            android:textColor="@color/secondary_text"

            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
        <EditText
            android:id= "@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginTop="40sp"
            android:background="@drawable/backgroud_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="@color/primary_text"
            android:textSize="13sp"
            tools:ignore="VisualLintTextFieldSize" />
        <EditText
            android:id= "@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginTop="16sp"
            android:background="@drawable/backgroud_input"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="@color/primary_text"
            android:textSize="13sp"
            tools:ignore="VisualLintTextFieldSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="20sp"

            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:cornerRadius="8sp"

            tools:ignore="VisualLintButtonSize" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            />
        <TextView
            android:id="@+id/textCreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/create_new_account"
            android:textStyle="bold"
            android:textSize="13sp"
            android:textColor="@color/primary"
            />

    </LinearLayout>


</ScrollView>