<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:padding="24sp"

    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/create_new_account"
        android:textColor="@color/primary_text"

        android:textSize="18sp"
        android:textStyle="bold"
        />
    <FrameLayout
        android:id="@+id/layoutImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/background_image"
            android:scaleType="centerCrop"
            app:riv_oval="true"


            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textAddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_image"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck" />
        

    </FrameLayout>

        <EditText
            android:id= "@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/backgroud_input"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="@color/primary_text"
            android:textSize="13sp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id= "@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginTop="16sp"
            android:background="@drawable/backgroud_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="@color/primary_text"
            android:textSize="13sp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id= "@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginTop="16sp"
            android:background="@drawable/backgroud_input"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="@color/primary_text"
            android:textSize="13sp"
            tools:ignore="VisualLintTextFieldSize" />
        <EditText
            android:id= "@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginTop="16sp"
            android:background="@drawable/backgroud_input"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="@color/primary_text"
            android:textSize="13sp"
            tools:ignore="VisualLintTextFieldSize" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="16sp"

            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:cornerRadius="8sp"

            tools:ignore="VisualLintButtonSize" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:visibility="invisible"
        />

        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textSize="13sp"
            android:textColor="@color/primary"
            />

    </LinearLayout>
</ScrollView>